name:                ludum-dare31
version:             0.1.0.0
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable ludum-dare31
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                     , gloss
                     , reactive-banana
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -W -Wall
